--- a/templates/CD1.html
+++ b/templates/CD1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <title>RHCP</title>
 </head>
 <body>
@@ -12,11 +12,11 @@
     <div class="menu">
         <ul>
             <li>
-                <a href="Principal.html">PAGINA PRINCIPAL</a>
+                <a href="../Principal.html">PAGINA PRINCIPAL</a>
                 <ul>
-                    <li><a href="Registro.html">REGISTRATE</a></li>
+                    <li><a href="../templates/Registro.html">REGISTRATE</a></li>
                     <li><a href="#">INTEGRANTES</a></li>
-                    <li><a href="discografias.html">DISCOGRAFIA</a></li>
+                    <li><a href="../templates/discografias.html">DISCOGRAFIA</a></li>
                     <li><a href="#">RECITALES</a></li>
                 </ul>
             </li>
