--- a/templates/Registro.html
+++ b/templates/Registro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <title>RHCP</title>
 </head>
 <body>
@@ -11,18 +11,18 @@
     <div class="menu">
         <ul>
             <li>
-                <a href="Principal.html">PAGINA PRINCIPAL</a>
+                <a href="../Principal.html">PAGINA PRINCIPAL</a>
                 <ul>
-                    <li><a href="Registro.html">REGISTRATE</a></li>
+                    <li><a href="../templates/Registro.html">REGISTRATE</a></li>
                     <li><a href="#">INTEGRANTES</a></li>
-                    <li><a href="discografias.html">DISCOGRAFIA</a></li>
+                    <li><a href="../templates/discografias.html">DISCOGRAFIA</a></li>
                     <li><a href="#">RECITALES</a></li>
                 </ul>
             </li>
         </ul>
     </div>
     <form action="ezequielclara1@gmail.com" id="survey-form" method="post">
-        <img src="red hot.jpg" alt="esta pero no esta">
+        <img src="../static/img/red hot.jpg" alt="esta pero no esta">
         <fieldset>
             <p><b>ESCRIBE TUS DATOS A CONTINUACION</b></p>
             <label for="" id="name-label">Tu nombre: <input type="text" placeholder="tu nombre" required></label>
@@ -48,10 +48,10 @@
         </fieldset>
         <fieldset>
             <legend><b>TU MIEMBRO FAVORITO DE LA BANDA ES?</b></legend>
-            <label for=""><input type="radio" name="artist" id="artist" value="1"> Anthony Kiedis <a href="https://www.google.com.ar/search?q=anthony+kiedis&sca_esv=eb5fe49497ada2df&udm=2&biw=1366&bih=607&sxsrf=ADLYWILtuNdUvd5_plm4j3eKJUj-fJDTkQ%3A1727887679272&ei=P3n9ZoGjEPPN1sQP9OigyQk&oq=a&gs_lp=Egxnd3Mtd2l6LXNlcnAiAWEqAggAMgQQIxgnMgoQABiABBhDGIoFMgoQABiABBhDGIoFMgsQABiABBixAxiDATIKEAAYgAQYQxiKBTILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBMgUQABiABDILEAAYgAQYsQMYgwEyBRAAGIAESIEIUABYAHAAeACQAQCYAU-gAU-qAQExuAEByAEA-AEBmAIBoAJUmAMAkgcBMaAHqwY&sclient=gws-wiz-serp"><img id="img_art" src="anthony.jpg" alt=""></a></label>
-            <label for=""><input type="radio" name="artist" id="artist" value="2"> John Frusciante <a href="https://www.google.com.ar/search?q=john+frusciante&sca_esv=eb5fe49497ada2df&udm=2&biw=1366&bih=607&sxsrf=ADLYWILrgi8_C3ktehfQUHI4c0NhScmBjw%3A1727887575390&ei=13j9ZvK-F-nU1sQP1OacwQE&oq=jo&gs_lp=Egxnd3Mtd2l6LXNlcnAiAmpvKgIIADIEECMYJzIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIQEAAYgAQYsQMYQxiDARiKBTILEAAYgAQYsQMYgwEyChAAGIAEGEMYigUyCxAAGIAEGLEDGIMBMgoQABiABBhDGIoFSKsMUABYSnAAeACQAQCYAWGgAa8BqgEBMrgBA8gBAPgBAZgCAqACtwHCAg4QABiABBixAxiDARiKBcICBRAAGIAEmAMAkgcDMS4xoAfpDA&sclient=gws-wiz-serp"><img id="img_art" src="john.jpg" alt=""></a></label>
-            <label for=""><input type="radio" name="artist" id="artist" value="3"> Flea <a href="https://www.gettyimages.es/fotos/flea-red-hot-chili-peppers-photos"><img id="img_art" src="flea.jpg" alt=""></a></label>
-            <label for=""><input type="radio" name="artist" id="artist" value="4"> Chad Smith <a href="https://www.gettyimages.es/detail/fotograf%C3%ADa-de-noticias/drummer-chad-smith-of-the-red-hot-chili-peppers-fotograf%C3%ADa-de-noticias/956740424?adppopup=true"><img id="img_art" src="chad.jpg" alt="" ></a></label>
+            <label for=""><input type="radio" name="artist" id="artist" value="1"> Anthony Kiedis <a href="https://www.google.com.ar/search?q=anthony+kiedis&sca_esv=eb5fe49497ada2df&udm=2&biw=1366&bih=607&sxsrf=ADLYWILtuNdUvd5_plm4j3eKJUj-fJDTkQ%3A1727887679272&ei=P3n9ZoGjEPPN1sQP9OigyQk&oq=a&gs_lp=Egxnd3Mtd2l6LXNlcnAiAWEqAggAMgQQIxgnMgoQABiABBhDGIoFMgoQABiABBhDGIoFMgsQABiABBixAxiDATIKEAAYgAQYQxiKBTILEAAYgAQYsQMYgwEyCxAAGIAEGLEDGIMBMgUQABiABDILEAAYgAQYsQMYgwEyBRAAGIAESIEIUABYAHAAeACQAQCYAU-gAU-qAQExuAEByAEA-AEBmAIBoAJUmAMAkgcBMaAHqwY&sclient=gws-wiz-serp"><img id="img_art" src="../static/img/anthony.jpg" alt=""></a></label>
+            <label for=""><input type="radio" name="artist" id="artist" value="2"> John Frusciante <a href="https://www.google.com.ar/search?q=john+frusciante&sca_esv=eb5fe49497ada2df&udm=2&biw=1366&bih=607&sxsrf=ADLYWILrgi8_C3ktehfQUHI4c0NhScmBjw%3A1727887575390&ei=13j9ZvK-F-nU1sQP1OacwQE&oq=jo&gs_lp=Egxnd3Mtd2l6LXNlcnAiAmpvKgIIADIEECMYJzIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIKEAAYgAQYQxiKBTIQEAAYgAQYsQMYQxiDARiKBTILEAAYgAQYsQMYgwEyChAAGIAEGEMYigUyCxAAGIAEGLEDGIMBMgoQABiABBhDGIoFSKsMUABYSnAAeACQAQCYAWGgAa8BqgEBMrgBA8gBAPgBAZgCAqACtwHCAg4QABiABBixAxiDARiKBcICBRAAGIAEmAMAkgcDMS4xoAfpDA&sclient=gws-wiz-serp"><img id="img_art" src="../static/img/john.jpg" alt=""></a></label>
+            <label for=""><input type="radio" name="artist" id="artist" value="3"> Flea <a href="https://www.gettyimages.es/fotos/flea-red-hot-chili-peppers-photos"><img id="img_art" src="../static/img/flea.jpg" alt=""></a></label>
+            <label for=""><input type="radio" name="artist" id="artist" value="4"> Chad Smith <a href="https://www.gettyimages.es/detail/fotograf%C3%ADa-de-noticias/drummer-chad-smith-of-the-red-hot-chili-peppers-fotograf%C3%ADa-de-noticias/956740424?adppopup=true"><img id="img_art" src="../static/img/chad.jpg" alt="" ></a></label>
             <p>(has clic en la imagen si quieres ver mas fotos del integrante)</p>
         </fieldset>
         <fieldset>
@@ -60,7 +60,7 @@
         </fieldset>
         <label for="terms-and-conditions"><input type="checkbox" id="ready" value="ready"> Listo para ser parte de esto!!</label>
         <label for="terms-and-conditions"><input type="checkbox" id="ready" value="ready" required> Acepto <a href="">terminos y condiciones</a></label>
-        <img src="red hot.jpg" alt="esta pero no esta">
+        <img src="../static/img/red hot.jpg" alt="esta pero no esta">
         <input type="submit" id="submit" value="Registrate">
     </form>
     <footer>
