--- a/templates/discografias.html
+++ b/templates/discografias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <title>RHCP</title>
 </head>
 <body>
@@ -12,11 +12,11 @@
     <div class="menu">
         <ul>
             <li>
-                <a href="Principal.html">PAGINA PRINCIPAL</a>
+                <a href="../Principal.html">PAGINA PRINCIPAL</a>
                 <ul>
-                    <li><a href="Registro.html">REGISTRATE</a></li>
+                    <li><a href="../templates/Registro.html">REGISTRATE</a></li>
                     <li><a href="#">INTEGRANTES</a></li>
-                    <li><a href="discografias.html">DISCOGRAFIA</a></li>
+                    <li><a href="../templates/discografias.html">DISCOGRAFIA</a></li>
                     <li><a href="#">RECITALES</a></li>
                 </ul>
             </li>
@@ -24,67 +24,67 @@
     </div>
     <main class="pagina_principal">
         <div id="imagen_principal">
-            <a href="CD1.html"><img src="CD1.jpg" alt=""></a>
+            <a href="CD1.html"><img src="../static/img/CD1.jpg" alt=""></a>
             <legend>The Red Hot Chili Peppers</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD2.html"><img src="CD2.jpg" alt=""></a>
+            <a href="CD2.html"><img src="../static/img/CD2.jpg" alt=""></a>
             <legend>Freaky Styley</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD3.html"><img src="CD3.jpg" alt=""></a>
+            <a href="CD3.html"><img src="../static/img/CD3.jpg" alt=""></a>
             <legend>The uplift Mofo Party Plan</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD4.html"><img src="CD4.jpg" alt=""></a>
+            <a href="CD4.html"><img src="../static/img/CD4.jpg" alt=""></a>
             <legend>Mother´s Milk</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD5.html"><img src="CD5.jpg" alt=""></a>
+            <a href="CD5.html"><img src="../static/img/CD5.jpg" alt=""></a>
             <legend>Blood Sugar Sex Magik</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD6.html"><img src="CD6.jpg" alt=""></a>
+            <a href="CD6.html"><img src="../static/img/CD6.jpg" alt=""></a>
             <legend>One Hot Minute</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD7.html"><img src="CD7.jpg" alt=""></a>
+            <a href="CD7.html"><img src="../static/img/CD7.jpg" alt=""></a>
             <legend>Californication</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD8.html"><img src="CD8.jpg" alt=""></a>
+            <a href="CD8.html"><img src="../static/img/CD8.jpg" alt=""></a>
             <legend>By The Way</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD9.html"><img src="CD9.jpg" alt=""></a>
+            <a href="CD9.html"><img src="../static/img/CD9.jpg" alt=""></a>
             <legend>Stadium Arcadium</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD10.html"><img src="CD10.jpg" alt=""></a>
+            <a href="CD10.html"><img src="../static/img/CD10.jpg" alt=""></a>
             <legend>I´m With You</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD11.html"><img src="CD11.jpg" alt=""></a>
+            <a href="CD11.html"><img src="../static/img/CD11.jpg" alt=""></a>
             <legend>The Getaway</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD12.html"><img src="CD12.jpg" alt=""></a>
+            <a href="CD12.html"><img src="../static/img/CD12.jpg" alt=""></a>
             <legend>Unlimited Love</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
         <div id="imagen_principal">
-            <a href="CD13.html"><img src="CD13.jpg" alt=""></a>
+            <a href="CD13.html"><img src="../static/img/CD13.jpg" alt=""></a>
             <legend>Return Of The Dream Canteen</legend>
             <p id="descrpcion_prin">Para mas informacion del disco y escucharlo clic en la imagen</p>
         </div>
